fix footer hgroup alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -313,6 +313,12 @@ footer {
     align-items: center;
     margin-bottom: 1.7rem;
 
+    hgroup {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
     img {
       width: 27%;
       height: 30%;
